fixed bug with z-index

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
     text-decoration: none;
     color: rgba(255, 255, 255, 1);
     box-sizing: border-box;
+    font-display: swap;
 }
 *::before, *::after{
     box-sizing: border-box;
